more edit meme features

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 </div>
 
                 <div class="action-btns flex flex-column">
+                    <button class="delete-meme-btn btn" onclick="onDeleteMeme()">Delete Meme</button>
                     <button class="save-meme-btn btn" onclick="onSaveMeme()">Save Meme</button>
                     <button onmouseover="onPrepToDownload()" onmouseleave="onLeaveDownload()">
                          <a class="download-meme-btn btn" onclick="onDownloadMeme(this)"
