--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="editing-features">
-                <input class="meme-text-input" type="text" onkeyup="setLineText(this)" placeholder="Enter Text Here">
+                <input class="meme-text-input" type="text" onkeyup="onSetLineText(this)" placeholder="Enter Text Here">
                 <div class="line-change-btns">
                     <button class="line-switch btn fa fa-arrows" onclick="onSwitchLine()"></button>
                     <button class="line-add btn fa fa-add" onclick="onAddLine()"></button>
